samples/errors/call_non_function.lox
// Error: Calling a non-function value
// expect: runtime error
var x = 1;
x();
